// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`User > renders with as correctly 1`] = `
"<section data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</section>"
`;

exports[`User > renders with avatar correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with avatar slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">Avatar slot<div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with chip correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span><span data-slot="base" class=""></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with class correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="absolute"><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with default slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->Default slot
  </div>
</div>"
`;

exports[`User > renders with description correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with description slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Description slot</p>
  </div>
</div>"
`;

exports[`User > renders with name correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <!--v-if-->
  </div>
</div>"
`;

exports[`User > renders with name slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Name slot</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with size 2xl correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with size 2xs correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with size 3xl correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with size 3xs correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with size lg correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with size md correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with size sm correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with size xl correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with size xs correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with to correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class=""><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Benjamin Canac" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
    <p data-slot="name" class="">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;

exports[`User > renders with ui correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="User avatar" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p data-slot="name" class="font-bold">Benjamin Canac</p>
    <p data-slot="description" class="">Software Engineer</p>
  </div>
</div>"
`;
